--- a/frontend-vue/public/index.html
+++ b/frontend-vue/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon2.svg" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+    <link rel="icon" href="<%= BASE_URL %>favicon2.svg"/>
+    <link rel="preload" as="font" href="/assets/fonts/PatrickHand-Regular.woff" type="font/woff" crossorigin="anonymous">
     <title>Schwarmvogel</title>
   </head>
   <body>
